--- a/style.css
+++ b/style.css
@@ -3380,11 +3380,11 @@ CSS to your style.css (around line 720 after the quick-actions styles): */
 }
 
 .map-actions .auto-control.pause {
-    background: url('images/play-btn.svg') no-repeat center;
+    background: url('/images/play-btn.svg') no-repeat center;
 }
 
 .map-actions .auto-control.play {
-    background: url('images/pause-btn.svg') no-repeat center;
+    background: url('/images/pause-btn.svg') no-repeat center;
 }
 
 .tour-header .chevron {
