--- a/style.css
+++ b/style.css
@@ -3543,6 +3543,9 @@ CSS to your style.css (around line 720 after the quick-actions styles): */
   border-bottom: 1px solid #E9EDF5;
 }
 
+.esri-ui .esri-attribution {
+   display: none;
+}
 
 
 
